# sims-hybrid-algs

./: .gitignore  CLAUDE.md  README.md  SIMS_MILP_Algorithm_Analysis.md  TRACE_ARCHIVE_SPECIFICATION.md  TRACE_SPECIFICATION.md  augmecon-rs_GPBA_Inconsistencies_Analysis.md  compare_flows.sh  enhanced_pls.aux  enhanced_pls.out  many_objective_pls.txt  nd_trees.txt  pyproject.toml  speeding_up_pls.txt  test_milp_timeout.py
augmecon-rs/: .clippy.toml  .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GPBA.md  README.md  benchmark_gpba_solvers.sh  install-hooks.sh  rustfmt.toml  test_solver_selection.rs  test_solvers.rs
augmecon-rs/.github/: copilot-instructions.md
augmecon-rs/docs/: getting-started.md  gpba-concepts.md  problem-modeling.md  sims-cp.md  sims-milp.md  solver-configuration.md
augmecon-rs/examples/: basic_production.rs  basic_production_simple.rs  bypass_performance_test.rs  bypass_test.rs  flag_array_test.rs  gpba_algorithms.rs  parallel_example.rs  parallel_performance_test.rs  portfolio_optimization.rs  sims_example.rs  solver_test.rs  solver_test_non_gurobi.rs  test_highs.rs
augmecon-rs/hooks/: README.md  pre-commit
augmecon-rs/src/: bounds.rs  bypass.rs  epsilon_constraint.rs  epsilon_constraint_backup.rs  error.rs  flag.rs  gpba.rs  grid.rs  interval_manager.rs  lib.rs  model.rs  options.rs  problem_utils.rs  sims_problem.rs  single_objective.rs  solution.rs  solver.rs  solver_enum.rs  timer.rs
augmecon-rs/tests/: test_2kp.rs  test_3kp.rs  test_4kp.rs  test_gpba_phases.rs  test_grid_density.rs  test_objectives.rs  test_sims.rs
nd-tree/: .criterion.toml  Cargo.toml  TRACKED_ND_TREE.md
nd-tree/.cargo/: config.toml
nd-tree/benches/: extract_trace.sh  nd_tree_pareto.rs  pareto_front_comparison.rs  trace_replay_bench.rs
nd-tree/src/: lib.rs  linkedlist_pareto_front.rs  main.rs  nd_tree.rs  nd_tree_pareto_front.rs  tracked_nd_tree.rs  vec_pareto_front.rs
sims-core/: Justfile  analyze_milp_times.py  analyze_milp_timing.py  pyproject.toml
sims-core/scripts/: analyze_profiling_traces.py  build_merged_pareto_fronts.py  parse_hypervolumes.py  parse_hypervolumes_from_results.py  parse_milp_results.py  parse_objective_bounds.py  sims_cli.py
sims-core/tests/: conftest.py  extract_pseudo_solver_data.py  solver_test_utils.py  test_ablation_study.py  test_milp_instances.py  test_rust_milp_instances.py  test_rust_python_milp_comparison.py  test_trace.py  test_two_phases_instances.py  test_validate_sota_results.py
sims-heuristics/: .dockerignore  .gitignore  CONCURRENT_PLS_DESIGN.md  Cargo.toml  Concurrent PLS.md  Dockerfile  PLS_DESIGN.md  README.md  analyze_flamegraph.py  analyze_tracker_flamegraph.py  build-docker.sh  check_coverage.py  convert_unsafe.py  flamegraph_opt3.folded  flamegraph_opt4.folded  flamegraph_opt5.folded  flamegraph_opt9.folded  perf_tree.py  shorten_flamegraph_svg.py
sims-heuristics/.cargo/: config.toml
sims-heuristics/benches/: objective_tracker_bench.rs  objective_tracker_benchmarks.rs  problem_bitset_vs_default.rs  unique_values_count_bench.rs
sims-heuristics/docs/: ALGORITHM_BENCHMARK_REPORT.md  HYBRID_BENCHMARK_REPORT.md  PLS_DESIGN.md  advanced_optimizations.md  tracker_challenge.md
sims-heuristics/scripts/: analyze_access_pattern.py  generate_benchmark_plots.py  generate_hybrid_benchmark_html.py  generate_hybrid_benchmark_plots.py  generate_hybrid_benchmark_report.py  validate_benchmark_data.py  validate_tracker_trace.py
sims-heuristics/src/: diverse_probe_iter.rs  explorable_set.rs  explored_solutions_data.rs  file_io.rs  lib.rs  main.rs  objective_tracker.rs  objectives.rs  objectives.rs.backup  pareto_local_search.rs  plotting.rs  pls_config.rs  probabilistic_probing_neighborhood.rs  problem.rs  problem_bitset.rs  residual_problem.rs  residual_solution.rs  scalarization.rs  solution.rs  solution_set.rs  test_generic_objectives.rs  timer.rs  trackers.rs
sims-heuristics/tests/: proven_safe_correctness.rs  test_concurrent_pls.rs  test_evolutionary.rs  test_external_solvers.rs  test_generic_objectives.rs  test_neighborhood_iter.rs  test_problem_bitset.rs  test_real_instances.rs  test_solution_sets.rs  test_trace_replay.rs  test_trackers.rs
sims-problem/: .dockerignore  Cargo.toml  add_exact_curves_README.md  add_exact_curves_batch.py  add_exact_solver_curves.py  analyze_instances.py  benchmark.py  benchmark_hybrid.py  debug_hv_curves.py  debug_initial_hv.py  measure_init_time.py  plot_pseudo_solver_size50.py  pyproject.toml  repro_crash.py  run_hv_experiments.py  sims_problem.pyi  visualize_initial_hv_bug.py
sims-problem/hv_experiment_results_diverse_vs_scalarized_max150/: all_experiments.json  lagos_nigeria_100.json  lagos_nigeria_145.json  lagos_nigeria_30.json  lagos_nigeria_50.json  mexico_city_100.json  mexico_city_150.json  mexico_city_30.json  mexico_city_50.json  paris_100.json  paris_150.json  paris_30.json  paris_50.json  rio_de_janeiro_100.json  rio_de_janeiro_150.json  rio_de_janeiro_30.json  rio_de_janeiro_50.json  tokyo_bay_100.json  tokyo_bay_150.json  tokyo_bay_30.json  tokyo_bay_50.json
sims-problem/hv_experiment_results_pure_vs_scalarized_lagos100/: all_experiments.json  lagos_nigeria_100.json  lagos_nigeria_145.json  lagos_nigeria_30.json  lagos_nigeria_50.json  mexico_city_100.json  mexico_city_150.json  mexico_city_30.json  mexico_city_50.json  paris_100.json  paris_150.json  paris_30.json  paris_50.json  rio_de_janeiro_100.json  rio_de_janeiro_150.json  rio_de_janeiro_30.json  rio_de_janeiro_50.json  tokyo_bay_100.json  tokyo_bay_150.json  tokyo_bay_30.json  tokyo_bay_50.json
sims-problem/paper/: enhanced_pls.aux  enhanced_pls.fdb_latexmk  enhanced_pls.fls  enhanced_pls.out  enhanced_pls.tex  enhanced_pls2.aux  enhanced_pls2.fdb_latexmk  enhanced_pls2.fls  enhanced_pls2.out  enhanced_pls2.tex
sims-problem/src/: conversion.rs  hypervolume.rs  lib.rs  problem.rs  solution.rs  solver.rs  trace.rs
sims-problem/test_output_tokyo/: pls_benchmark_summary_20260113_130629.json  tokyo_bay_50_summary_20260113_130629.json
sims-solvers/: .dockerignore  README.md  pyproject.toml
(+5632 files in other folders)
