[project]
name = "sims-hybrid-algs"
version = "0.1.0"
description = "SIMS Hybrid Algorithms"
authors = [
    { name = "Vladyslav Hlushchenko", email = "hl.vladyslav@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv==1.1.1",
    "pandas==2.3.3",
    "sims-core==0.1.0",
    "seaborn==0.13.2",
    "scikit-posthocs>=0.11.4",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.6",
    "scipy>=1.16.2",
    "numpy>=2.3.3",
    "maturin>=1.9.5",
    "plotly>=6.3.1",
    "sims-solvers",
    "sims-problem",
]

[project.optional-dependencies]
dev = ["ruff==0.13.3"]

[project.scripts]
sims = "sims_cli:main"

[tool.uv.workspace]
members = [
    "sims-core",
    "sims-solvers"
]

[tool.uv.sources]
sims-core = { workspace = true }
sims-solvers = { workspace = true }
sims-problem = { path = "sims-problem" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
