[project]
name = "sims-hybrid-algs"
version = "0.1.0"
description = "SIMS Hybrid Algorithms"
authors = [
    { name = "Vladyslav Hlushchenko", email = "hl.vladyslav@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv==1.1.1",
    "pandas==2.3.3",
    "seaborn==0.13.2",
    "scikit-posthocs>=0.11.4",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.7",
    "scipy>=1.16.2",
    "numpy>=2.3.3",
    "maturin>=1.9.6",
    "plotly>=6.3.1",
    "markdown>=3.10",
    "sims-core",
    "sims-solvers",
    "sims-problem",
]

[project.optional-dependencies]
dev = ["ruff==0.14.0"]

[project.scripts]
sims = "sims_cli:main"

[tool.uv.workspace]
members = [
    "sims-core",
    "sims-solvers",
    "sims-problem",
]

[tool.uv.sources]
sims-core = { workspace = true }
sims-solvers = { workspace = true }
sims-problem = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
