[package]
name = "nd-tree"
version = "0.1.0"
edition = "2021"

[lib]
name = "nd_tree"
path = "src/lib.rs"

[[bench]]
name = "nd_tree_pareto"
harness = false
path = "benches/nd_tree_pareto.rs"

[[bench]]
name = "pareto_front_comparison"
harness = false
path = "benches/pareto_front_comparison.rs"

[[bench]]
name = "trace_replay_bench"
harness = false
path = "benches/trace_replay_bench.rs"

# Performance-optimized profiles
[profile.release]
opt-level = 3              # Maximum optimization
lto = "fat"                # Link-time optimization across all crates
codegen-units = 1          # Single codegen unit for better optimization
panic = "abort"            # Smaller binary, faster execution
strip = true               # Strip debug symbols
overflow-checks = false    # Disable integer overflow checks for speed

[profile.bench]
inherits = "release"       # Use release optimizations for benchmarks
debug = true               # Keep debug info for profiling
strip = false              # Keep symbols for benchmark analysis

# Optimize dependencies aggressively for native CPU
# (Native CPU targeting configured in .cargo/config.toml)
[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[profile.bench.package."*"]
opt-level = 3
codegen-units = 1

[dependencies]
arrayvec = "0.7.6"
plotters = { version = "0.3.7", optional = true }
slotmap = "1.1.1"
tracing = "0.1.43"
pareto = { path = "../pareto" }
rand = "0.9.2"

[features]
default = []
plotting = ["plotters"]
scalarized_query = []

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
proptest = "1.9.0"

[lints.clippy]
# Enable all pedantic and nursery lints with priority
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
