[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "sims-core"
version = "0.1.0"
description = "SIMS Hybrid Solvers - Core Package"
requires-python = ">=3.11"
authors = [{ name = "Vladyslav Hlushchenko", email = "hl.vladyslav@gmail.com" }]
dependencies = [
    "aiohttp==3.12.6",
    "geojson==3.2.0",
    "geopandas==1.0.1",
    "numpy==2.2.6",
    "pymoo==0.6.1.5",
    "shapely==2.1.1",
    "sims-problem",
    "sims-solvers==0.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.11.12"
]

[tool.uv.sources]
sims-problem = { path = "../sims-problem" }
sims-solvers = { workspace = true }
