[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "sims-core"
version = "0.1.0"
description = "SIMS Hybrid Solvers - Core Package"
requires-python = ">=3.11"
authors = [{ name = "Vladyslav Hlushchenko", email = "hl.vladyslav@gmail.com" }]
dependencies = [
    "aiohttp==3.12.15",
    "geojson==3.2.0",
    "geopandas==1.1.1",
    "numpy==2.3.3",
    "pymoo==0.6.1.5",
    "shapely==2.1.2",
    "sims-problem",
    "sims-solvers==0.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.13.3"
]

[tool.uv.sources]
sims-problem = { path = "../sims-problem" }
sims-solvers = { workspace = true }

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s (%(filename)s:%(lineno)d)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
