[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[project]
name = "sims-core"
version = "0.1.0"
description = "SIMS Hybrid Solvers - Core Package"
requires-python = ">=3.11"
authors = [{ name = "Vladyslav Hlushchenko", email = "hl.vladyslav@gmail.com" }]
dependencies = [
    "aiohttp==3.12.15",
    "geojson==3.2.0",
    "geopandas==1.1.1",
    "matplotlib>=3.8.0",
    "numpy==2.3.3",
    "pymoo==0.6.1.5",
    "shapely==2.1.2",
    "sims-problem",
    "sims-solvers",
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.0"
]

[tool.uv.build-backend]
module-name = "sims.core"

[tool.uv.sources]
sims-problem = { workspace = true }
sims-solvers = { workspace = true }

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s (%(filename)s:%(lineno)d)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
