[package]
name = "sims-heuristics"
version = "0.1.0"
edition = "2024"
autobenches = false

[lib]
name = "pls"

[[bin]]
name = "pls"
path = "src/main.rs"
test = false
bench = false

[[bench]]
name = "unique_values_count_bench"
harness = false

[dev-dependencies]
criterion = "0.6.0"

[dependencies]
log = "0.4.27"
stderrlog = "0.6.0"
rand = "0.9.1"
regex = "1.11.1"
itertools = "0.14.0"
clap = { version = "4.5.40", features = ["derive"] }
csv = "1.3.1"
serde = "1.0.219"
chrono = "0.4.41"
plotters = { version = "0.3.7", optional = true }
humantime = "2.2.0"
pareto = { path = "../pareto", version = "0.1.0" }
nd-tree = { path = "../nd-tree", version = "0.1.0"}
fixedbitset = { version = "0.5.7", optional = true }

[features]
default = ["bitmaps"]
plotting = ["plotters"]
bitmaps = ["fixedbitset"]

[profile.release]
debug = true
codegen-units = 1
lto = "fat"
panic = "abort"

[lints.clippy]
# Enable all pedantic and nursery lints with priority
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Keep existing overrides with higher priority
needless_return = "allow"

