[package]
name = "sims-heuristics"
version = "0.1.0"
edition = "2024"
autobenches = false

[lib]
name = "pls"

[[bin]]
name = "pls"
path = "src/main.rs"
test = false
bench = false

[[bench]]
name = "unique_values_count_bench"
harness = false

[[bench]]
name = "problem_bitset_vs_default"
harness = false

[[bench]]
name = "objective_tracker_benchmarks"
harness = false

[dev-dependencies]
criterion = "0.8.1"
serde_json = "1.0.145"

[dependencies]
log = "0.4.29"
stderrlog = "0.6.0"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "time"] }
tracing-log = "0.2.0"
tracing-chrome = "0.7.2"
rand = "0.9.2"
regex = "1.12.2"
itertools = "0.14.0"
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.4.0"
serde = "1.0.228"
chrono = "0.4.42"
plotters = { version = "0.3.7", optional = true }
humantime = "2.3.0"
pareto = { path = "../pareto", version = "0.1.0" }
nd-tree = { path = "../nd-tree", version = "0.1.0", default-features = false}
fixedbitset = { version = "0.5.7", optional = true }

[features]
default = ["bitmaps", "plotting"]
plotting = ["plotters", "nd-tree/plotting"]
bitmaps = ["fixedbitset"]

[profile.release]
debug = true
codegen-units = 1
lto = "fat"
panic = "abort"

[lints.clippy]
# Enable all pedantic and nursery lints with priority
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Keep existing overrides with higher priority
needless_return = "allow"

