[package]
name = "sims-heuristics"
version = "0.1.0"
edition = "2024"
autobenches = false

[lib]
name = "pls"

[[bin]]
name = "pls"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "debug-lagos-30"
path = "src/bin/debug_lagos_30.rs"
test = false
bench = false

[[bin]]
name = "debug-pls"
path = "src/bin/debug_pls.rs"
test = false
bench = false

[[bin]]
name = "debug-lagos-100"
path = "src/bin/debug_lagos_100.rs"
test = false
bench = false

[[bin]]
name = "record-tracker-trace"
path = "src/bin/record_tracker_trace.rs"
test = false
bench = false

[[bin]]
name = "pls-benchmark"
path = "src/bin/pls_benchmark.rs"
test = false
bench = false
required-features = ["parallel"]

[[bin]]
name = "analyze-decomposition"
path = "src/bin/analyze_decomposition.rs"
test = false
bench = false
required-features = ["parallel"]

[[bench]]
name = "unique_values_count_bench"
harness = false

[[bench]]
name = "problem_bitset_vs_default"
harness = false

[[bench]]
name = "objective_tracker_bench"
harness = false
required-features = ["additional_trackers"]

[dev-dependencies]
criterion = "0.8.1"

[dependencies]
log = "0.4.29"
env_logger = "0.11.8"
stderrlog = "0.6.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "time"] }
tracing-log = "0.2.0"
tracing-perfetto = "0.1.5"
rand = "0.9.2"
regex = "1.12.2"
itertools = "0.14.0"
clap = { version = "4.5.54", features = ["derive"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.42"
plotters = { version = "0.3.7", optional = true }
humantime = "2.3.0"
pareto = { path = "../pareto", version = "0.1.0" }
nd-tree = { path = "../nd-tree", version = "0.1.0", default-features = false}
fixedbitset = { version = "0.5.7", optional = true }
smallvec = "1.15.1"
arrayvec = "0.7.6"
crossbeam-channel = { version = "0.5", optional = true }
arc-swap = { version = "1.7", optional = true }
num_cpus = { version = "1.16", optional = true }

[features]
default = ["bitmaps", "plotting", "bounds_check"]
plotting = ["plotters", "nd-tree/plotting"]
bitmaps = ["fixedbitset"]
additional_trackers = []
bounds_check = []
parallel = ["crossbeam-channel", "arc-swap", "num_cpus", "bitmaps"]

[profile.release]
debug = true
codegen-units = 1
lto = "fat"
panic = "abort"

[lints.clippy]
# Enable all pedantic and nursery lints with priority
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Keep existing overrides with higher priority
needless_return = "allow"

