[package]
name = "sims-problem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sims_problem"
crate-type = ["cdylib"]

[features]
default = ["plotting"]
plotting = ["pls/plotting"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
pls = { path = "../sims-heuristics", package = "sims-heuristics", version = "0.1.0", features = ["plotting"] }
pareto = { path = "../pareto", version = "0.1.0" }
regex = "1.0"
log = "0.4"
pyo3-log = "0.12"
