[package]
name = "sims-problem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sims_problem"
crate-type = ["cdylib"]

[features]
default = []
plotting = ["pls/plotting"]
milp = ["augmecon", "augmecon/coin_cbc"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
pls = { path = "../sims-heuristics", package = "sims-heuristics", version = "0.1.0", default-features = false, features = ["bitmaps"] }
pareto = { path = "../pareto", version = "0.1.0" }
augmecon = { path = "../augmecon-rs", version = "0.1.0", optional = true }
regex = "1.0"
log = "0.4"
pyo3-log = "0.12"
tar = "0.4"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "fmt"] }
tracing-chrome = "0.7"
