[package]
name = "sims-problem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sims_problem"
crate-type = ["cdylib"]

[features]
default = ["bounds_check", "parallel"]
plotting = ["pls/plotting"]
milp = ["augmecon", "augmecon/coin_cbc"]
bounds_check = ["pls/bounds_check"]
parallel = ["pls/parallel"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
pls = { path = "../sims-heuristics", package = "sims-heuristics", version = "0.1.0", default-features = false, features = ["bitmaps"] }
pareto = { path = "../pareto", version = "0.1.0" }
augmecon = { path = "../augmecon-rs", version = "0.1.0", optional = true }
regex = "1.12.2"
log = "0.4.29"
pyo3-log = "0.13.2"
tar = "0.4.44"
flate2 = "1.1.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "fmt"] }
tracing-chrome = "0.7.2"
