[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "sims-problem"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "plotly>=6.3.1",
    "pymoo>=0.6.1.6",
    "rich>=14.2.0",
    "sims-solvers",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "black",
    "ruff",
]

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}, {file = "../sims-heuristics/Cargo.toml"}, {file = "../sims-heuristics/**/*.rs"}]
config-settings = { build-args = '--profile=dev'}

[tool.uv.sources]
# Use relative path for standalone builds (e.g., in Docker)
sims-solvers = { path = "../sims-solvers", editable = true }

[tool.maturin]
features = ["pyo3/extension-module", "milp", "scalarized_selection"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--color=yes",
    "--cov=sims_problem",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--log-level=DEBUG",
    "--log-cli-level=INFO",
    "--log-cli-format=%(asctime)s [%(levelname)8s] %(name)s: %(message)s",
    "--log-file=pytest.log",
    "--log-file-level=DEBUG",
    "--log-file-format=%(asctime)s [%(levelname)8s] %(name)s: %(message)s",
    "--log-file-date-format=%Y-%m-%d %H:%M:%S",
    "--capture=no",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["sims_problem"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "maturin>=1.9.6",
    "patchelf>=0.17.2.4",
    "pymoo>=0.6.1.6",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
]
