[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[project]
name = "sims-solvers"
version = "0.1.0"
description = "Solvers for Satelite Image Mozaic Selection problem"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "contextily==1.6.2",
    "dataclasses-json==0.6.7",
    "filelock==3.19.1",
    "geojson==3.2.0",
    "geopandas==1.1.1",
    "gurobipy==12.0.3",
    "numpy==2.3.3",
    "ortools==9.14.6206",
    "pymoo==0.6.1.5",
    "shapely==2.1.2",
    "minizinc[dzn]==0.10.0",
    "pytest>=8.4.2",
    "pytest-timeout>=2.4.0",
]

[project.scripts]
sims_solvers = "sims_solvers.main:main"

[tool.uv.build-backend]
module-name = "sims_solvers"
module-root = ""
source-include = ["sims_solvers/mzn_models/*.mzn"]
